Cambio 4: Mostar Preferencias

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
             android:label="Acerca de ..."
             android:theme="@style/Theme.AppCompat.Dialog" />
 
+        <activity
+            android:name=".PreferenciasActivity"
+            android:label="Preferencias" />
+
+
     </application>
 
 </manifest>
